update the banner

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
     <div class="slider-container">
         <ul class="slider">
-            <li>
+            <li class="ones">
                 <div class="banner-content">
                     <div class="container">
                         <div class="row">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li class="twos">
                 <div class="banner-content">
                     <div class="container">
                         <div class="row">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li class="threes">
                 <div class="banner-content">
                     <div class="container">
                         <div class="row">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li class="one">
                 <div class="banner-content">
                     <div class="container">
                         <h2>Best Pizzas in the Philippines</h2>
@@ -123,7 +123,7 @@
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6 col-lg-5">
                     <div class="img-container one">
-
+                        <p>Vegan</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-5">
