--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="shortcut icon" href="assests/logo.png" type="image/png">
+
+    <script src="js/script.js" defer ></script>
+
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+
 </head>
 <body>
     <nav>
@@ -181,6 +187,10 @@
         </div>
     </div>
 
+    <div class="container map">
+        <div id='map'></div>
+    </div>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -237,7 +247,6 @@
     
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/font_awesome.js"></script>
 </body>
 </html>
