map section done

--- a/index.html
+++ b/index.html
@@ -187,9 +187,12 @@
         </div>
     </div>
 
-    <div class="container map">
-        <div id='map'></div>
+    <div class="map-section">
+        <div class="container-fluid">
+            <div id='map'></div>
+        </div>
     </div>
+    
 
     <footer>
         <div class="container">
